AWS (#100)
* Code refactor

* Added opportunity to upload to user new image